tests/baselines/reference/objectSpreadStrictNull.errors.txt
objectSpreadStrictNull.ts(14,9): error TS2322: Type '{ sn: number | undefined; }' is not assignable to type '{ sn: string | number; }'.
  Types of property 'sn' are incompatible.
    Type 'number | undefined' is not assignable to type 'string | number'.
      Type 'undefined' is not assignable to type 'string | number'.
objectSpreadStrictNull.ts(15,9): error TS2322: Type '{ sn: number | undefined; }' is not assignable to type '{ sn: string | number; }'.
  Types of property 'sn' are incompatible.
    Type 'number | undefined' is not assignable to type 'string | number'.
      Type 'undefined' is not assignable to type 'string | number'.
objectSpreadStrictNull.ts(18,9): error TS2322: Type '{ sn: string | number | undefined; }' is not assignable to type '{ sn: string | number | boolean; }'.
  Types of property 'sn' are incompatible.
    Type 'string | number | undefined' is not assignable to type 'string | number | boolean'.
      Type 'undefined' is not assignable to type 'string | number | boolean'.
objectSpreadStrictNull.ts(28,26): error TS2322: Type 'undefined' is not assignable to type 'string'.
objectSpreadStrictNull.ts(42,5): error TS2322: Type '{ foo: number | undefined; bar: string | undefined; }' is not assignable to type 'Fields'.
  Types of property 'foo' are incompatible.
    Type 'number | undefined' is not assignable to type 'number'.
      Type 'undefined' is not assignable to type 'number'.


==== objectSpreadStrictNull.ts (5 errors) ====
    function f(
        definiteBoolean: { sn: boolean },
        definiteString: { sn: string },
        optionalString: { sn?: string },
        optionalNumber: { sn?: number },
        undefinedString: { sn: string | undefined },
        undefinedNumber: { sn: number | undefined }) {
        // optional
        let optionalUnionStops: { sn: string | number } = { ...definiteBoolean, ...definiteString, ...optionalNumber };
        let optionalUnionDuplicates: { sn: string | number } = { ...definiteBoolean, ...definiteString, ...optionalString, ...optionalNumber };
        let allOptional: { sn?: string | number } = { ...optionalString, ...optionalNumber };
    
        // undefined
        let undefinedUnionStops: { sn: string | number } = { ...definiteBoolean, ...definiteString, ...undefinedNumber };
            ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ sn: number | undefined; }' is not assignable to type '{ sn: string | number; }'.
!!! error TS2322:   Types of property 'sn' are incompatible.
!!! error TS2322:     Type 'number | undefined' is not assignable to type 'string | number'.
!!! error TS2322:       Type 'undefined' is not assignable to type 'string | number'.
        let undefinedUnionDuplicates: { sn: string | number } = { ...definiteBoolean, ...definiteString, ...undefinedString, ...undefinedNumber };
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ sn: number | undefined; }' is not assignable to type '{ sn: string | number; }'.
!!! error TS2322:   Types of property 'sn' are incompatible.
!!! error TS2322:     Type 'number | undefined' is not assignable to type 'string | number'.
!!! error TS2322:       Type 'undefined' is not assignable to type 'string | number'.
        let allUndefined: { sn: string | number | undefined } = { ...undefinedString, ...undefinedNumber };
    
        let undefinedWithOptionalContinues: { sn: string | number | boolean } = { ...definiteBoolean, ...undefinedString, ...optionalNumber };
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ sn: string | number | undefined; }' is not assignable to type '{ sn: string | number | boolean; }'.
!!! error TS2322:   Types of property 'sn' are incompatible.
!!! error TS2322:     Type 'string | number | undefined' is not assignable to type 'string | number | boolean'.
!!! error TS2322:       Type 'undefined' is not assignable to type 'string | number | boolean'.
    }
    
    type Movie = {
        title: string;
        yearReleased: number;
    }
    
    const m = { title: "The Matrix", yearReleased: 1999 };
    // should error here because title: undefined is not assignable to string
    const x: Movie = { ...m, title: undefined };
                             ~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'string'.
!!! related TS6500 objectSpreadStrictNull.ts:22:5: The expected type comes from property 'title' which is declared here on type 'Movie'
    
    interface Fields {
        foo: number;
        bar: string;
    }
    interface NearlyPartialFields {
        foo: number | undefined;
        bar: string | undefined;
    }
    function g(fields: Fields, partialFields: Partial<Fields>, nearlyPartialFields: NearlyPartialFields) {
        // ok, undefined is stripped from optional properties when spread
        fields = { ...fields, ...partialFields };
        // error: not optional, undefined remains
        fields = { ...fields, ...nearlyPartialFields };
        ~~~~~~
!!! error TS2322: Type '{ foo: number | undefined; bar: string | undefined; }' is not assignable to type 'Fields'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type 'number | undefined' is not assignable to type 'number'.
!!! error TS2322:       Type 'undefined' is not assignable to type 'number'.
    }
    